[package]
name = "chessno"
version = "0.0.0"
edition = "2021"

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
nalgebra = "0.31.2"
bytemuck = { version = "1.4", features = ["derive"] }
rand = "0.8.5"
image = { version =  "0.24", features = ["jpeg"] }
erupt = "0.22.0"
thiserror = "1.0"
smallvec = "1.10"
memoffset = "0.6.5"
obj = "0.10.2"
uuid = { version = "1.2.1", features = ["v4" ]}

[lib]
crate-type = ["lib", "cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = {  version = "0.7.0", features = ["logger"] }
ndk-context = "0.1.1"
jni = "0.20.0"
