[package]
name = "chessno"
version = "0.0.0"
edition = "2021"

[dependencies]
winit = "0.27"
env_logger = "0.9"
log = "0.4"
glam = "0.22.0"
bytemuck = { version = "1.4", features = ["derive"] }
rand = "0.8.5"
image = { version =  "0.24", features = ["jpeg"] }
ash = "0.37"
smallvec = "1.10"
memoffset = "0.6.5"
tobj = "3.2"
uuid = { version = "1.2.1", features = ["v4" ]}

[lib]
crate-type = ["lib", "cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = {  version = "0.7.0", features = ["logger"] }
ndk-context = "0.1.1"
ndk = "0.7.0"
jni = "0.20.0"

[package.metadata.android]
assets = "assets"

[package.metadata.android.application]
label = "Chessno"

[package.metadata.android.application.activity]
# orientation = "landscape"

[package.metadata.android.sdk]
min_sdk_version = 23

[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = true
version = 1

[package.metadata.android.signing.release]
path = ".android/debug.keystore"
keystore_password = "android"